--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -19,12 +19,14 @@ bEnableFOVScaling=True
 FOVScale=0.011110
 DoubleClickTime=0.200000
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
--ActionMappings=(ActionName="Turret_Clockwise",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Turret_Clockwise",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Quit",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Quit",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Quit",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Quit",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 -AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
 -AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
--AxisMappings=(AxisName="AimElevation",Key=None,Scale=1.000000)
+-AxisMappings=(AxisName="AimElevation",Key=Gamepad_RightY,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
