--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -54,6 +54,6 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/BattleGround
-EditorStartupMap=/Game/Maps/BattleGround
+GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/_Levels/BattleGround.BattleGround
 
